# NorthStar

./: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  northstar_plan.md  northstar_requirements.md  pyproject.toml
benchmarks/: __init__.py  run_demos.py
benchmarks/baselines/: __init__.py  human_expert.py  vanilla_cursor.py
benchmarks/scoring/: __init__.py  calculator.py  dimensions.py  methodology.py
benchmarks/test_cases/: __init__.py  case_01_ecommerce_mvp.py  case_02_binance_integration.py  case_03_saas_conflict.py  case_04_technical_debt.py  case_05_pivot_scenario.py
docs/: APO_PERSPECTIVE.md  ARCHITECTURE.md  BENCHMARKS.md  DESIGN_DECISIONS.md  FDE_PERSPECTIVE.md  PROBLEM_STATEMENT.md
examples/01_ecommerce_mvp/: input.yaml  walkthrough.md
examples/02_binance_integration/: input.yaml  walkthrough.md
examples/03_saas_conflict/: input.yaml  walkthrough.md
northstar/: __init__.py  cli.py  config.py  exceptions.py  pipeline.py
northstar/agent/: __init__.py  agent.py  prompts.py  tools.py
northstar/analysis/: __init__.py  gap_analyzer.py  leverage_ranker.py  models.py  priority_debt.py
northstar/detection/: __init__.py  alerting.py  drift_monitor.py  session_tracker.py
northstar/ingestion/: __init__.py  codebase_scanner.py  context_builder.py  doc_reader.py  goal_parser.py
northstar/integrations/: __init__.py  cursor.py  git.py  llm.py
northstar/reporting/: __init__.py  debt_report.py  decision_logger.py  retrospective.py  templates.py
northstar/state/: __init__.py  manager.py  (+1 more)
tests/: conftest.py
(+34 files in other folders)
